# posterazor

./: CHANGES  README  createFlatSourceRelease.sh  createLinuxBinaryRelease.sh  createSourceRelease.cmd  createWin32VC6BinaryRelease.cmd  index.html  licenseText.txt
Binary Releases/1.9.7/: PosteRazor-1.9.7-OSX.dmg
PosteRazor/: CHANGES  PaperFormats.cxx  PaperFormats.h  PosteRazor.h  PosteRazorDialog.cxx  PosteRazorDialogUI.cxx  PosteRazorDialogUI.fl  PosteRazorDialogUI.h  README  createFlatSourceRelease.sh  createLinuxBinaryRelease.sh  createSourceRelease.cmd  createWin32VC6BinaryRelease.cmd  posterazor.list
PosteRazor/docs/diagrams/: paintcanvasses.dia
PosteRazor/projects/cmake/: CMakeLists.txt  CMakeLists_flat_source_tree.txt
PosteRazor/projects/vc6/: PosteRazor.dsp  PosteRazorUI.dsp
PosteRazor/projects/vcnet2003/: PosteRazor.sln  PosteRazor.vcproj  PosteRazorCmdLine.vcproj  PosteRazorUI.vcproj
PosteRazor/projects/xcode2/: Info.plist
PosteRazor/source/: LICENSE.TXT  README
PosteRazor/source/posterazor/: PosteRazor.cpp  PosteRazor.cxx  PosteRazor.h  PosteRazorCmdLine.cpp  PosteRazorCmdLine.cxx  PosteRazorImageIO.cpp  PosteRazorImageIO.cxx  PosteRazorImageIO.h  PosteRazorPDFOutput.cpp  PosteRazorPDFOutput.cxx  PosteRazorPDFOutput.h
PosteRazor/source/posterazor_ui_common/: PosteRazorDialogController.cpp  PosteRazorDialogController.h  PosteRazorWizardDialogController.h
PosteRazor/source/posterazor_ui_fltk/: FlDrawPaintCanvas.cpp  FlDrawPaintCanvas.h  FlGlPaintCanvas.cpp  FlGlPaintCanvas.h  FlImageTextButton.cpp  FlImageTextButton.h  FlPaintCanvasGroup.cpp  FlPaintCanvasGroup.h  FlPersistentPreferences.cpp  FlPersistentPreferences.h  FlPosteRazorDialog.h  FlPosteRazorDialogUI.cpp  FlPosteRazorDialogUI.fl  FlPosteRazorDialogUI.h  FlPosteRazorHelpDialog.cpp  FlPosteRazorSettingsDialog.h  FlPosteRazorSpinner.cpp  FlPosteRazorSpinner.h  Fl_Draw_Paint_Canvas.cpp  Fl_Draw_Paint_Canvas.h  Fl_Gl_Paint_Canvas.cpp  Fl_Gl_Paint_Canvas.h  Fl_Image_Text_Button.cpp  Fl_Image_Text_Button.h  Fl_Paint_Canvas_Group.cpp  Fl_Paint_Canvas_Group.h  Fl_Persistent_Preferences.h  Fl_PosteRazor_Spinner.cpp  Fl_PosteRazor_Spinner.h  PosteRazorDialog.cpp  PosteRazorDialog.h  PosteRazorDialogUI.cpp  PosteRazorDialogUI.cxx  PosteRazorDialogUI.fl  PosteRazorDialogUI.h  PosteRazorHelpDialog.cpp  PosteRazorHelpDialog.h  PosteRazorSettingsDialog.cpp  (+1 more)
PosteRazor/webpage/: createScreenshotThumbs.cmd  index.php  pad_file.xml  style.css
docs/: howtobuild_osx.txt
packaging/: createLinuxRelease.sh  createOSXRelease.sh  createSourceRelease.cmd  createWin32Release.cmd
packaging/iss/: license.rtf  posterazor.iss
projects/cmake/: CMakeLists.txt  CMakeLists_deep_source_tree.txt  CMakeLists_flat_source_tree.txt
projects/posterazor_fltk/cmake/: CMakeLists.txt  CMakeLists_deep_source_tree.txt  CMakeLists_flat_source_tree.txt
projects/vc6/: PosteRazor.dsp  PosteRazor.dsw  PosteRazorUI.dsp
projects/vcnet2003/: PosteRazor.sln  PosteRazor.vcproj  PosteRazorCmdLine.vcproj  PosteRazorUI.vcproj
projects/xcode2/: Info.plist  PosteRazor_Prefix.pch
source/posterazor/: PosteRazor.cpp  PosteRazor.cxx  PosteRazor.h  PosteRazorCmdLine.cpp  PosteRazorCmdLine.cxx  PosteRazorImageIO.cpp  PosteRazorImageIO.cxx  PosteRazorImageIO.h  PosteRazorPDFOutput.cpp  PosteRazorPDFOutput.cxx  PosteRazorPDFOutput.h
source/posterazor_ui_common/: PosteRazorDialogController.cpp  PosteRazorDialogController.h  PosteRazorWizardDialogController.cpp  PosteRazorWizardDialogController.h
source/posterazor_ui_fltk/: Fl_Draw_Paint_Canvas.cpp  Fl_Draw_Paint_Canvas.h  Fl_Gl_Paint_Canvas.cpp  Fl_Gl_Paint_Canvas.h  Fl_Image_Text_Button.cpp  Fl_Paint_Canvas_Group.cpp  Fl_Paint_Canvas_Group.h  Fl_Persistent_Preferences.cpp  Fl_Persistent_Preferences.cxx  Fl_Persistent_Preferences.h  Fl_PosteRazor_Spinner.cpp  Fl_PosteRazor_Spinner.h  PosteRazorDialog.cpp  PosteRazorDialog.cxx  PosteRazorDialog.h  PosteRazorDialogUI.cpp  PosteRazorDialogUI.fl  PosteRazorDialogUI.h  PosteRazorHelpDialog.cpp  PosteRazorSettingsDialog.cpp  PosteRazorSettingsDialog.h
source/posterazor_ui_qt/: PosteRazorDialog.cpp  PosteRazorDialog.h  PosteRazorDialog.ui  QPaintCanvas.cpp  QPaintCanvas.h  QPersistentPreferences.h
source/tools/: ColorTypes.h  DistanceUnits.cxx  DistanceUnits.h  ImageIOTypes.cpp  ImageIOTypes.h  PaintCanvasBase.cpp  PaintCanvasBase.h  PaintCanvasInterface.h  PaperFormats.cpp  PaperFormats.cxx  PaperFormats.h  PersistentPreferencesInterface.h  UnitsOfLength.cpp  UnitsOfLength.h
src/: CHANGES  CMakeLists.txt  ColorTypes.h  FlDrawPaintCanvas.cpp  FlDrawPaintCanvas.h  FlGlPaintCanvas.cpp  FlGlPaintCanvas.h  FlImageTextButton.cpp  FlImageTextButton.h  FlPaintCanvasGroup.cpp  FlPaintCanvasGroup.h  FlPersistentPreferences.cpp  FlPersistentPreferences.h  FlPosteRazorDialog.cpp  FlPosteRazorDialog.h  FlPosteRazorDialogUI.cpp  FlPosteRazorDialogUI.fl  FlPosteRazorDialogUI.h  FlPosteRazorHelpDialog.cpp  FlPosteRazorHelpDialog.h  FlPosteRazorSettingsDialog.cpp  FlPosteRazorSettingsDialog.h  FlPosteRazorSpinner.cpp  FlPosteRazorSpinner.h  ImageIOTypes.cpp  ImageIOTypes.h  Info.plist  PaintCanvasBase.cpp  PaintCanvasBase.h  PaintCanvasInterface.h  PaperFormats.cpp  PaperFormats.h  PersistentPreferencesInterface.h  PosteRazor.cpp  PosteRazor.h  PosteRazor.pro  PosteRazor.vcproj  PosteRazorCmdLine.cpp  PosteRazorCmdLine.vcproj  PosteRazorDialogController.cpp  (+113 more)
src/PosteRazor.xcodeproj/: project.pbxproj
tests/: cmyk_32bpp.tif  testimages.cmd
tests/inputimages/: cmyk_32bpp.tif  cmyk_64bpp.tif  createimages.cmd  grayscale_16bpp.tif  grayscale_8bpp.tif  monochrome_1bpp.tif  palette_1bpp.tif  palette_2bpp.tif  palette_4bpp.tif  palette_8bpp.tif  rgb_24bpp.tif  rgb_48bpp.tif  rgba_32bpp.tif  rgba_64bpp.tif
webpage/: _webPagePath.txt  createScreenshotThumbs.cmd  index.php  jquery.lightbox-0.5.css  jquery.lightbox-0.5.min.js  mootools-release-1.11.js  pad_file.xml  phpSniff.class.php  phpSniff.core.php  slimbox.css  slimbox.js  style.css
webpage/screencast/: de_screencast.avs  de_screencast.blend  screencast.avs  screencast.blend  tools.avsi
(+163 files in other folders)
