PROJECT(PosteRazor)

IF (WIN32 OR APPLE)
	SET(POSTERAZOR_ENABLEGLPREVIEW TRUE)
	SET(POSTERAZOR_ENABLELAUNCHURLSORFILES TRUE)
ENDIF (WIN32 OR APPLE)

IF (EXISTS PosteRazor.cpp)
	INCLUDE (CMakeLists_flat_source_tree.txt)
ELSE (EXISTS PosteRazor.cpp)
	INCLUDE (CMakeLists_deep_source_tree.txt)
ENDIF (EXISTS PosteRazor.cpp)

SET(POSTERAZOR_SOURCES
	${POSTERAZOR_CORESOURCES}
	${POSTERAZOR_UISOURCES}
)

SET(POSTERAZOR_DEFINITIONS
	-DFREEIMAGE_LIB
)

SET(POSTERAZOR_LINKDIRECTORIES
	../../../thirdparty/FreeImage/Dist
)

IF (NOT POSTERAZOR_ENABLEGLPREVIEW)
	SET(POSTERAZOR_DEFINITIONS
		${POSTERAZOR_DEFINITIONS}
		-DNO_OPENGL_PREVIEW
	)
ENDIF (NOT POSTERAZOR_ENABLEGLPREVIEW)

IF (NOT POSTERAZOR_ENABLELAUNCHURLSORFILES)
	SET(POSTERAZOR_DEFINITIONS
		${POSTERAZOR_DEFINITIONS}
		-DNO_LAUNCH_URLS_OR_FILES
	)
ENDIF (NOT POSTERAZOR_ENABLELAUNCHURLSORFILES)

IF (WIN32)
	ADD_EXECUTABLE(PosteRazor WIN32 ${POSTERAZOR_SOURCES} ${POSTERAZOR_RC_FILE})
	SET(POSTERAZOR_INCLUDEDIRECTORIES ${POSTERAZOR_INCLUDEDIRECTORIES}
		../../../thirdparty/fltk-1.1
		../../../source/posterazor_ui_common/windowsResources
	)
	SET(POSTERAZOR_LINKDIRECTORIES
		${POSTERAZOR_LINKDIRECTORIES}
		../../../thirdparty/fltk-1.1/lib
	)
	SET(POSTERAZOR_LINKLIBRARIES
		debug FreeImaged
		optimized FreeImage
		debug fltkd
		optimized fltk
		wsock32
		comctl32
	)
	IF (POSTERAZOR_ENABLEGLPREVIEW)
		SET(POSTERAZOR_LINKLIBRARIES 
			${POSTERAZOR_LINKLIBRARIES}
			debug fltkgld
			optimized fltkgl
			glu32
			opengl32
		)
	ENDIF (POSTERAZOR_ENABLEGLPREVIEW)
	SET_TARGET_PROPERTIES(PosteRazor PROPERTIES LINK_FLAGS "/nodefaultlib:LIBC")
ENDIF (WIN32)

IF (APPLE)
	ADD_EXECUTABLE(PosteRazor MACOSX_BUNDLE ${POSTERAZOR_SOURCES})
	SET(POSTERAZOR_LINKLIBRARIES
		fltk
		fltk_gl
		freeimage
		"-framework Carbon -framework AGL -framework ApplicationServices -framework OpenGL -lz"
	)
ENDIF(APPLE)

IF (UNIX AND NOT APPLE)
	ADD_EXECUTABLE(PosteRazor ${POSTERAZOR_SOURCES})
	SET(POSTERAZOR_INCLUDEDIRECTORIES ${POSTERAZOR_INCLUDEDIRECTORIES}
		../../../source/posterazor_ui_common/x11Resources
	)
	FIND_PACKAGE(X11)
	SET(POSTERAZOR_LINKDIRECTORIES
		${POSTERAZOR_LINKDIRECTORIES}
		${X11_LIBRARIES}
	)
	SET(POSTERAZOR_LINKLIBRARIES
		fltk
		fltk_images
		freeimage
		X11
		Xpm
#		Xft
#		Xinerama
	)
	IF (POSTERAZOR_ENABLEGLPREVIEW)
		SET(POSTERAZOR_LINKLIBRARIES
			${POSTERAZOR_LINKLIBRARIES}
			fltk_gl
		)
	ENDIF (POSTERAZOR_ENABLEGLPREVIEW)
ENDIF (UNIX AND NOT APPLE)

ADD_DEFINITIONS(${POSTERAZOR_DEFINITIONS})
LINK_DIRECTORIES(${POSTERAZOR_LINKDIRECTORIES})
INCLUDE_DIRECTORIES(${POSTERAZOR_INCLUDEDIRECTORIES})
TARGET_LINK_LIBRARIES(PosteRazor ${POSTERAZOR_LINKLIBRARIES})
